# DataIQ

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
MLRadar/: __init__.py  demo.py
MLRadar/core/: __init__.py  dataset.py
dataiq/: __init__.py  demo.py
dataiq/cli/: dataiq_drift.py
dataiq/core/: __init__.py  analyzer.py  code_gen.py  drift.py  interactions.py  leakage.py  profiler.py  report_builder.py  scorer.py
dataiq/templates/: drift_template.py  html_template.py  narrative.py
examples/: basic_usage.py
mlsentry/cli/: dataiq_drift.py  mlprofiler_train.py
mlsentry/core/: analyzer.py  code_gen.py  profiler.py  report_builder.py  transformer.py
mlsentry/templates/: __init__.py  drift_template.py  html_template.py  narrative.py
