[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MLRadar"
version = "1.0.0"
description = "ML Data Intelligence Suite — Readiness scoring, leakage detection, drift analysis, and pipeline generation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Rishabh Bhartiya", email = "rishabh.bhartiya.in@gmail.com" }
]
keywords = [
    "machine learning", "data profiling", "eda", "exploratory data analysis",
    "data quality", "feature engineering", "data drift", "leakage detection",
    "sklearn pipeline", "ml readiness"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
    "scipy>=1.7",
    "plotly>=5.0",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
full = [
    "shap",
    "optuna",
    "xgboost",
    "lightgbm",
    "pyarrow",
    "statsmodels",
    "openpyxl",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "twine",
    "build",
]

[project.urls]
Homepage = "https://github.com/rishabhbhartiya/MLRadar"
Repository = "https://github.com/rishabhbhartiya/MLRadar"
"Bug Tracker" = "https://github.com/rishabhbhartiya/MLRadar/issues"
Documentation = "https://github.com/rishabhbhartiya/MLRadar#readme"

[project.scripts]
MLRadar-train = "MLRadar.cli.mlprofiler_train:main"
MLRadar-drift = "MLRadar.cli.dataiq_drift:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["MLRadar*"]

[tool.setuptools.package-data]
MLRadar = ["templates/*.py", "templates/*.html"]

